# SuperModelingFactory

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  WEIGHTED_IMPL_MARKER.md  gen_stubs.py  pyproject.toml  requirements.txt  setup.py  tasks.py
.claude/: settings.local.json
.github/workflows/: build.yml  tests.yml  verify.yml
ExcelMaster/: ExcelFormatTool.py  ExcelMaster.py  README.md  Template.py  Utility.py  __init__.py
Modeling_Tool/: README.md  __init__.py  weighted_integration.py  weighted_integration.pyi
Modeling_Tool/Core/: Binning_Tool.py  Binning_Tool.pyi  Check_DuckDB_Compatibility.py  Json_Data_Converter.py  Model_Registry_Tool.py  ODPS_Tool.py  Parallel_Engine.py  Parallel_ODPS_Manager.py  Proc_Compare.py  Slope_Tool.py  Slope_Tool.pyi  XOR_Encryptor.py  XOR_Encryptor.pyi  __init__.py  kDataFrame.py  kDataFrame.pyi  sample_weight_utils.py  test_remove_comments.py  utils.py
Modeling_Tool/Core/backup/: Model_Utility_Tool.py
Modeling_Tool/Eval/: Evaluation_Tool.py  Evaluation_Tool.pyi  Model_Eval_Tool.py  Model_Eval_Tool.pyi  __init__.py  _push_probe.txt  evaluate_model.py  evaluate_model.pyi  evaluate_model_test.py  weighted_eval_utils.py
Modeling_Tool/Explainability/: Coalition_Structure.py  Model_Explainer.py  __init__.py
Modeling_Tool/Feature/: Distribution_Tool.py  Distribution_Tool.pyi  Feature_Insights.py  Feature_Insights.pyi  PSI_Tool.py  PSI_Tool.pyi  WOE_Engine_Feature_Patch.py  __init__.py
Modeling_Tool/Model/: Backward_Tool.py  Backward_Tool.pyi  GBM_Search_Tool.py  GBM_Search_Tool.pyi  GBM_Tool.py  GBM_Tool.pyi  LRM_Tool.py  LRM_Tool.pyi  __init__.py
Modeling_Tool/Model/backup/: LGBM_Grid_Tool.py  LGBM_Tool.py  XGBM_Tool.py  base_models.py  lgb_models.py  xgb_models.py
Modeling_Tool/Pipeline/: __init__.py  _common.py  credit_model.py  feature_validation.py  mock_sample.py  reject_inference.py  sample_analysis.py  score_comparison.py  score_consistency_uat.py
Modeling_Tool/Sample/: Distribution_Adaptation.py  Distribution_Adaptation.pyi  Reject_Infer.py  Reject_Infer.pyi  Sample_Split.py  Sample_Split.pyi  __init__.py
Modeling_Tool/Sample/backup/: Reject_Infer_Tool.py  Sample_Tool.py
Modeling_Tool/UAT/: UAT_Consistency_Checker.py  __init__.py
Modeling_Tool/WOE/: WOE_Adapter.py  WOE_Adapter.pyi  WOE_Master.py  WOE_Master.pyi  WOE_Monotone_Binner.py  WOE_Monotone_Binner.pyi  WOE_Plot_Tool.py  WOE_Plot_Tool.pyi  WOE_Report_Builder.py  WOE_Report_Builder.pyi  WOE_Tool.py  WOE_Tool.pyi  __init__.py  plot_woe_tool.py  plot_woe_tool.pyi
Modeling_Tool/WOE/backup/: woe_binning.py
Modeling_Tool/backup/ParamTuning/: Optuna_Tool.py
Modeling_Tool/explainability/: Model_Explainer.py  __init__.py
Report/: README.md  Report_Tool.py  __init__.py
scripts/: decode_eval_json.mjs  verify_protection.py
