# =============================================================================
# SuperModelingFactory — PEP 517 build configuration
# =============================================================================

[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "SuperModelingFactory"
version = "0.3.0"
description = "Credit risk modeling factory: WOE binning, scorecards, LightGBM, Excel reporting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BUSL-1.1" }
authors = [
    { name = "Kyle Sun", email = "jingkai.sun20@alumni.imperial.ac.uk" },
]
keywords = [
    "credit-risk", "scorecard", "woe", "lightgbm",
    "psi", "iv", "modeling", "fintech",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: Other/Proprietary License",
]

dependencies = [
    "pandas>=1.5.0,<3",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "joblib>=1.2.0",
    "python-dateutil>=2.8.0",
    "lightgbm>=3.3.0",
    "xgboost>=1.7.0",
    "catboost>=1.2.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "xlsxwriter>=3.0.0",
    "openpyxl>=3.0.0",
    "Pillow>=9.0.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
optuna = ["optuna>=4.0.0"]
stats = ["statsmodels>=0.13.0"]
imblearn = ["imbalanced-learn>=0.10.0"]
explain = ["shap>=0.44.0", "lime>=0.2.0.1"]
mic = ["minepy>=1.2.6; python_version < '3.11'"]
odps = ["pyodps>=0.11.0"]

[project.urls]
Homepage = "https://github.com/Kyle-J-Sun/SuperModelingFactory"
Documentation = "https://kyle-j-sun.github.io/SuperModelingFactory_doc"
Source = "https://github.com/Kyle-J-Sun/SuperModelingFactory"
